--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>cloud-eureka-server</module>
         <module>cloud-provider-payment8002</module>
         <module>cloud-eureka-server7002</module>
+        <module>cloud-consul-provider-payment</module>
+        <module>cloud-consul-consumer-order</module>
     </modules>
 
     <properties>
