--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-eureka-server7002</module>
         <module>cloud-consul-provider-payment</module>
         <module>cloud-consul-consumer-order</module>
+        <module>cloud-gateway9527</module>
     </modules>
 
     <properties>
