--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
         <module>cloud-consul-provider-payment</module>
         <module>cloud-consul-consumer-order</module>
         <module>cloud-gateway9527</module>
+        <module>cloud-consumer-feign-order80</module>
+        <module>cloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-config-center-3344</module>
+        <module>cloud-config-client-3355</module>
+        <module>cloud-config-client-3366</module>
     </modules>
 
     <properties>
